--- a/src/sass/elements/_devider.scss
+++ b/src/sass/elements/_devider.scss
@@ -4,7 +4,7 @@
 hr {
 	position: relative;
 	clear: both;
-	background: #fff;
+	background: $colorMainBackground;
 	border: none;
 	outline: none;
 	display: none;
