--- a/src/sass/elements/_elements.scss
+++ b/src/sass/elements/_elements.scss
@@ -41,7 +41,8 @@
 // Screenreader Classes
 @import "accessibility";
 
-
+// Color Classes
+@import "color-classes";
 
 // General Classes
 @import "general-classes";
