--- a/src/sass/elements/_pagination.scss
+++ b/src/sass/elements/_pagination.scss
@@ -41,7 +41,7 @@
 	    }
 	    .number {
 		
-		background: #fff;
+		background: $colorMainBackground;
 		border: 1px solid $colorContentBorders;
 		padding: 6px 10px;
 		text-decoration: none;
