--- a/src/sass/fau-theme-style.scss
+++ b/src/sass/fau-theme-style.scss
@@ -1,6 +1,8 @@
 // Import FAU variables
 @import "variables";
 
+// Custom Properties
+@import "custom-properties";
 
 // Reset Base styles
 @import "reset";
