--- a/src/sass/icons/_default.scss
+++ b/src/sass/icons/_default.scss
@@ -3,7 +3,7 @@
 /*-----------------------------------------------------------------------------------*/
 
 $svg-icon-size: 1.4rem;
-$svg-icon-color: $colorPrimary;
+$svg-icon-color: var(--color-primary-basis);
 $svg-icon-color_hover: $colorHover;
 
 
