--- a/src/sass/structure/content/_gallery.scss
+++ b/src/sass/structure/content/_gallery.scss
@@ -224,7 +224,7 @@
 		&:before {
 			font-size: 40px;
 			line-height: 1;
-			color: $colorPrimary;
+			color: var(--color-primary-basis);
 			opacity: $slick-opacity-default;
 
 		}
@@ -369,7 +369,7 @@
 		
 			text-align: center;
 			opacity: .25;
-			color: $colorPrimary;
+			color: var(--color-primary-basis);
 
 		    }
 		    
