--- a/src/sass/structure/footer/_social-media.scss
+++ b/src/sass/structure/footer/_social-media.scss
@@ -2,7 +2,7 @@
 /* Social Media Widget
 /*-----------------------------------------------------------------------------------*/
 #social {
-	background: $colorSocialBackground;	
+	background: var(--color-StandardHellgrau);
 	margin: 0;
 	padding: 20px 0;
 	    
@@ -12,7 +12,7 @@
 	h3#socialmediatitle,
 	div h3:first-child,
 	h2  {
-		color: $colorSocial;
+		color: var(--color-primary-basis);
 		padding-top: 0;
 	}
 	h2, 
@@ -25,10 +25,10 @@
 	    display: block;
 	}
 	a {
-	    color: $colorSocial;	    
+	    color: var(--color-primary-basis);	    
 	    &:hover, &:focus {
 		    text-decoration: underline;
-		    color: $colorPrimary;
+		    color: var(--color-primary-basis);
 	    }
 	    
 	}
