--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -1,6 +1,59 @@
 /*-----------------------------------------------------------------------------------*/
 /* Backend CSS
 /*-----------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------------------*/
+/* CSS Custom Properties
+/*-----------------------------------------------------------------------------------*/
+:root {
+  --color-primary-basis: #003366;
+  --color-primary-heller: #8fb1ef;
+  --color-primary-hellste: #dde5f0;
+  --color-primary-dunkler: #24598f;
+  --color-primary-dunkelste: #1f4b7a;
+  --color-zentral-basis: #003366;
+  --color-zentral-heller: #8fb1ef;
+  --color-zentral-hellste: #dde5f0;
+  --color-zentral-dunkler: #24598f;
+  --color-zentral-dunkelste: #1f4b7a;
+  --color-phil-basis: #A36B0D;
+  --color-phil-heller: #d9c689;
+  --color-phil-hellste: #f3eedf;
+  --color-phil-dunkler: #805000;
+  --color-phil-dunkelste: #553500;
+  --color-med-basis: #0381A2;
+  --color-med-heller: #bfd6f5;
+  --color-med-hellste: #eaf3fc;
+  --color-med-dunkler: #026480;
+  --color-med-dunkelste: #014e63;
+  --color-nat-basis: #048767;
+  --color-nat-heller: #aacfbd;
+  --color-nat-hellste: #e5efea;
+  --color-nat-dunkler: #006e53;
+  --color-nat-dunkelste: #00533f;
+  --color-rw-basis: #8d1429;
+  --color-rw-heller: #c5ac94;
+  --color-rw-hellste: #ede7de;
+  --color-rw-dunkler: #690013;
+  --color-rw-dunkelste: #42000c;
+  --color-tf-basis: #6E7881;
+  --color-tf-heller: #d2d5d7;
+  --color-tf-hellste: #ebecee;
+  --color-tf-dunkler: #53606b;
+  --color-tf-dunkelste: #3b4956;
+  --color-Text: #444;
+  --color-TextLight: #797676;
+  --color-Notice: #a71c18;
+  --color-Alert: #c5ac94;
+  --color-ZUV: #003366;
+  --color-Default: #003366;
+  --color-MainBackground: #fff;
+  --color-StandardHellgrau: #e9edf2;
+  --color-ContentBorders: #dfe6ec;
+  --color-ContentRegions: #f5f7f9;
+  --color-white: #fff;
+  --color-black: #000;
+  --color-PrintMain: #000; }
+
 /*
 Mixins File for Wordpress Theme FAU
 */
@@ -2468,7 +2521,7 @@ table.wp-list-table .column-revealid_id {
 
 #customize-theme-controls .customize-control-multiple-select option:checked,
 #customize-theme-controls .customize-control-multiple-select option[selected] {
-  background: #e9edf2; }
+  background: var(--color-StandardHellgrau); }
 
 #customize-theme-controls .customize-control-multiple-select select[multiple]:focus option:checked {
   background: #0085ba;
