--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -90,7 +90,7 @@ textarea {
 
 body {
 	color: #333333;
-	background-color: #ffffff;
+	background-color: $colorMainBackground;
 }
 
 
@@ -255,7 +255,7 @@ input[type="url"],
 input[type="search"],
 input[type="tel"],
 input[type="color"] {
-	background-color: #ffffff;
+	background-color: $colorMainBackground;
 	border: 1px solid #cccccc;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 	transition: border linear 0.2s, box-shadow linear 0.2s;
@@ -285,7 +285,7 @@ input[type="file"] {
 
 select {
 	width: 220px;
-	background-color: #ffffff;
+	background-color: $colorMainBackground;
 	border: 1px solid #cccccc;
 }
 
