--- a/src/sass/elements/_images.scss
+++ b/src/sass/elements/_images.scss
@@ -9,7 +9,7 @@
 
 .img-polaroid {
 	padding: 4px;
-	background-color: #fff;
+	background-color: $colorMainBackground;
 	border: 1px solid #ccc;
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	@include box-shadow(0 1px 3px rgba(0, 0, 0, 0.1));
