--- a/src/sass/elements/_paragraphs.scss
+++ b/src/sass/elements/_paragraphs.scss
@@ -43,7 +43,7 @@ p {
 	&.lead-in {
 		margin: 0;
 		padding: 0;
-		color: $colorPrimary;
+		color: var(--color-primary-basis);
 		font-weight: 300;
 		font-style: italic;
 		@include px2rem($font-size-quotes);
