--- a/src/sass/fau-theme-admin.scss
+++ b/src/sass/fau-theme-admin.scss
@@ -10,6 +10,9 @@
 @import "variables";
 // Mixins
 
+// Custom Properties
+@import "custom-properties";
+
 $font-path-awesome:	'../fonts/fontawesome/';
 // da admin.css unter /css muss der pfad angepasst werden
 $font-path-roboto:	'../fonts/roboto/';
