--- a/src/sass/structure/content/_spalten.scss
+++ b/src/sass/structure/content/_spalten.scss
@@ -2,9 +2,6 @@
 /* CSS für die von Shortcodes erzeugten für Spalten im Content
 /*-----------------------------------------------------------------------------------*/
 
-/*
-*  Columns
-*/
 .two-columns-one, 
 .three-columns-one {
   width: 100%;
@@ -19,68 +16,69 @@ main {
 	  
 
 	&.primary {
-	    background: $colorPrimary;
+	    background: var(--color-primary-basis);
 	    padding: 10px;
 	    color: #fff;
 	    &.lighten {
-		  background: lighten( $colorPrimary, 10%);
+		  background: lighten( map-get($colormap-primary, "basis"), 10%);
 	    }
 	    
 	}
 	&.zuv, &.fau {
-	    background: $colorZUV;
+	    background: var(--color-ZUV);
 	   padding: 10px;
 	   color: #fff;
 	    &.lighten {
-		  background: lighten( $colorZUV, 10%);
+		  background: lighten( map-get($colormap-misc, "ZUV"), 10%);
 	    }
 	}
 	&.phil {
-	    background: $colorPhilFak;
+	    background: var(--color-phil-basis);
 	  padding: 10px;
 	  color: #fff;
 	   &.lighten {
-		  background: lighten( $colorPhilFak, 10%);
+		  background: lighten( map-get($colormap-phil, "basis"), 10%);
 	    }
 	}
 	&.nat {
-	    background: $colorNatFak;
+	    background: var(--color-nat-basis);
 	    padding: 10px;
 	    color: #fff;
 	     &.lighten {
-		  background: lighten( $colorNatFak, 10%);
+		  background: lighten( map-get($colormap-nat, "basis"), 10%);
 	    }
 	}
 	&.med {
-	    background: $colorMedFak;
+	    background: var(--color-med-basis);
 	    padding: 10px;
 	    color: #fff;
 	     &.lighten {
-		  background: lighten( $colorMedFak, 10%);
+		  background: lighten( map-get($colormap-med, "basis"), 10%);
 	    }
 	}
 	&.tf {
-	    background: $colorTechFak;
+	    background: var(--color-tf-basis);
 	    padding: 10px;
 	    color: #fff;
 	     &.lighten {
-		  background: lighten( $colorTechFak, 10%);
+		  background: lighten( map-get($colormap-tf, "basis"), 10%);
 	    }
 	}
 	&.rw {
-	    background: $colorRwFak;
+	    background: var(--color-rw-basis);
 	    padding: 10px;
 	    color: #fff;
 	     &.lighten {
-		  background: lighten( $colorRwFak, 10%);
+		  background: lighten(  map-get($colormap-rw, "basis"), 10%);
+		 
 	    }
 	}
 	&.grau, &.gray  {
-	    background: $colorStandardHellgrau;
+	    background: var(--color-StandardHellgrau);
 	    padding: 10px;
 
 	    &.lighten {
-		  background: lighten( $colorStandardHellgrau, 10%);
+		  background: lighten( map-get($colormap-misc, "StandardHellgrau"), 10%);
 	    }
 	}
 
