--- a/src/sass/structure/header/_grid.scss
+++ b/src/sass/structure/header/_grid.scss
@@ -3,7 +3,7 @@
 /*-----------------------------------------------------------------------------------*/
 #headerwrap {
     background-color: #fff;
-    color: $colorPrimary;
+    color: var(--color-primary-basis);
     position: sticky;
     top: 0;
     z-index: 100;
