--- a/src/sass/structure/navigation/_clonednav.scss
+++ b/src/sass/structure/navigation/_clonednav.scss
@@ -21,7 +21,7 @@
 				@include border-radius(0);
 				margin-bottom: 0;
 				padding: 2px 0;
-				color: $colorMeta;
+				color: var(--color-Default);
 			}
 
 			&:before {
@@ -29,7 +29,7 @@
 				@extend .fa-angle-right;
 				font-weight: bold;
 				display: table-cell;
-				color: $colorMeta;
+				color: var(--color-Default);
 				width: 20px;
 			}
 
@@ -62,40 +62,40 @@
 			}
 
 			&.zuv {
-				border-color: $colorZUV;
+				border-color: var(--color-zentral-basis);
 			}
 
 			&.phil,
 			&.philfak {
-				border-color: $colorPhilFak;
+				border-color: var(--color-phil-basis);
 			}
 
 			&.rw,
 			&.rwfak {
-				border-color: $colorRwFak;
+				border-color: var(--color-rw-basis);
 			}
 
 			&.med,
 			&.medfak {
-				border-color: $colorMedFak;
+				border-color: var(--color-med-basis);
 			}
 
 			&.nat,
 			&.natfak {
-				border-color: $colorNatFak;
+				border-color: var(--color-nat-basis);
 			}
 
 			&.tf,
 			&.techfak {
-				border-color: $colorTechFak;
+				border-color:  var(--color-tf-basis);
 			}
 
 			&.white {
-				border-color: #fff;
+				border-color: var(--color-white);
 			}
 
 			&.gray {
-				border-color: $colorStandardHellgrau;
+				border-color: var(--color-StandardHellgrau);
 			}
 
 
@@ -114,12 +114,12 @@
 
 	.cloned-meta-links,
 	.cloned-hero-nav {
-		background: $colorMetaBackground;
-		color: $colorMeta;
+		background: var(--color-StandardHellgrau);
+		color: var(--color-Default);
 
 		li, a, h1, h2, h3, h4, p {
-			background: $colorMetaBackground;
-			color: $colorMeta;
+			background: var(--color-StandardHellgrau);
+			color: var(--color-Default);
 		}
 		
 		@media (min-width: $screen-sm) {
